--- a/src/com/jackw/cfg.fxml
+++ b/src/com/jackw/cfg.fxml
@@ -10,6 +10,7 @@
 <?import javafx.scene.control.TabPane?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.Tooltip?>
 <?import javafx.scene.layout.AnchorPane?>
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.jackw.Controller">
@@ -26,12 +27,15 @@
                             <TableColumn fx:id="clientClass" prefWidth="102.0" text="Client Class" />
                           </columns>
                            <contextMenu>
-                              <ContextMenu>
+                              <ContextMenu fx:id="contextmenu_table1">
                                 <items>
                                   <MenuItem fx:id="menuitem_unlink" mnemonicParsing="false" onAction="#onAction" text="Unlink" />
                                 </items>
                               </ContextMenu>
                            </contextMenu>
+                           <tooltip>
+                              <Tooltip text="Hook file &lt;interface&gt; entry for a class and api interface" />
+                           </tooltip>
                         </TableView>
                         <ListView fx:id="list1" layoutX="25.0" layoutY="117.0" prefHeight="229.0" prefWidth="141.0">
                            <contextMenu>
@@ -40,7 +44,10 @@
                                   <MenuItem fx:id="menuitem_link_api_interface" mnemonicParsing="false" onAction="#onAction" text="Link to selected client class" />
                                 </items>
                               </ContextMenu>
-                           </contextMenu></ListView>
+                           </contextMenu>
+                           <tooltip>
+                              <Tooltip text="API Interface extension classes appear here" />
+                           </tooltip></ListView>
                         <ListView fx:id="list2" layoutX="181.0" layoutY="117.0" prefHeight="230.0" prefWidth="142.0">
                            <contextMenu>
                               <ContextMenu>
@@ -48,29 +55,49 @@
                                   <MenuItem fx:id="menuitem_link_class" mnemonicParsing="false" onAction="#onAction" text="Link to selected API Interface" />
                                 </items>
                               </ContextMenu>
-                           </contextMenu></ListView>
-                        <Button fx:id="btnLoadApiJar" layoutX="78.0" layoutY="14.0" mnemonicParsing="false" onAction="#onAction" text="Select JAR" />
+                           </contextMenu>
+                           <tooltip>
+                              <Tooltip text="Client JAR classes appear here" />
+                           </tooltip></ListView>
+                        <Button fx:id="btnLoadApiJar" layoutX="78.0" layoutY="14.0" mnemonicParsing="false" onAction="#onAction" text="Select JAR">
+                           <tooltip>
+                              <Tooltip text="Browse for a Parabot-api.jar" />
+                           </tooltip></Button>
                         <Label fx:id="lblApiPath" layoutX="234.0" layoutY="18.0" prefHeight="17.0" prefWidth="311.0" text="No API JAR selected" AnchorPane.rightAnchor="26.0">
                            <padding>
                               <Insets right="5.0" />
                            </padding></Label>
-                        <Button fx:id="btnReloadApiJar" layoutX="152.0" layoutY="14.0" mnemonicParsing="false" onAction="#onAction" text="Load JAR" />
+                        <Button fx:id="btnReloadApiJar" layoutX="152.0" layoutY="14.0" mnemonicParsing="false" onAction="#onAction" text="Load JAR">
+                           <tooltip>
+                              <Tooltip text="Click Load once you have selected a JAR" />
+                           </tooltip></Button>
                         <Label layoutX="226.0" layoutY="18.0" text="Path:" />
                         <Label layoutX="25.0" layoutY="88.0" text="API Interfaces" />
                         <Label layoutX="181.0" layoutY="89.0" text="Client Classes" />
-                        <Button layoutX="78.0" layoutY="49.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="70.0" text="Select JAR" />
+                        <Button layoutX="78.0" layoutY="49.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="70.0" text="Select JAR">
+                           <tooltip>
+                              <Tooltip text="Browse for a RSPS client JAR" />
+                           </tooltip>
+                        </Button>
                         <Label layoutX="226.0" layoutY="53.0" text="Path:" />
                         <Label fx:id="lblApiPath1" layoutX="263.0" layoutY="53.0" prefHeight="17.0" prefWidth="311.0" text="No Client JAR selected">
                            <padding>
                               <Insets right="5.0" />
                            </padding>
                         </Label>
-                        <Button fx:id="btnReloadApiJar1" layoutX="152.0" layoutY="49.0" mnemonicParsing="false" onAction="#onAction" text="Load JAR" />
+                        <Button fx:id="btnReloadApiJar1" layoutX="152.0" layoutY="49.0" mnemonicParsing="false" onAction="#onAction" text="Load JAR">
+                           <tooltip>
+                              <Tooltip text="Click Load once you select a JAR" />
+                           </tooltip>
+                        </Button>
                         <Label layoutX="14.0" layoutY="18.0" text="API:" />
                         <Label layoutX="14.0" layoutY="53.0" text="Client:" />
                      </children>
                   </AnchorPane>
-               </content></Tab>
+               </content>
+               <tooltip>
+                  <Tooltip text="Here you can customize the hooks file &lt;interfaces&gt; entries binding &lt;interface&gt; to &lt;class&gt;" />
+               </tooltip></Tab>
           <Tab text="Getters" />
         </tabs>
       </TabPane>
