--- a/src/com/jackw/views/tab2_getters.fxml
+++ b/src/com/jackw/views/tab2_getters.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
@@ -13,5 +14,7 @@
             <Font name="Berlin Sans FB Bold" size="20.0" />
          </font>
       </Label>
+      <Label layoutX="36.0" layoutY="71.0" text="1. Accessor: " />
+      <ChoiceBox fx:id="accessorChoice" layoutX="120.0" layoutY="67.0" prefWidth="150.0" />
    </children>
 </AnchorPane>
