--- a/src/com/jackw/views/tab1.fxml
+++ b/src/com/jackw/views/tab1.fxml
@@ -23,8 +23,8 @@
                      <children>
                         <TableView fx:id="table1" layoutX="357.0" layoutY="88.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="259.0" prefWidth="217.0">
                           <columns>
-                            <TableColumn fx:id="apiClass" prefWidth="114.0" text="API Interface" />
-                            <TableColumn fx:id="clientClass" prefWidth="102.0" text="Client Class" />
+                            <TableColumn fx:id="column1_apiInterClass" prefWidth="114.0" text="API Interface" />
+                            <TableColumn fx:id="column2_clientClass" prefWidth="102.0" text="Client Class" />
                           </columns>
                            <contextMenu>
                               <ContextMenu fx:id="contextmenu_table1">
