--- a/src/com/jackw/views/tab1.fxml
+++ b/src/com/jackw/views/tab1.fxml
@@ -55,7 +55,7 @@
                            <tooltip>
                               <Tooltip text="Client JAR classes appear here" />
                            </tooltip></ListView>
-                        <Button fx:id="select_jar_api" layoutX="78.0" layoutY="14.0" mnemonicParsing="false" onAction="#onAction" text="Select JAR">
+                        <Button fx:id="select_jar_api" layoutX="78.0" layoutY="14.0" mnemonicParsing="false" text="Select JAR">
                            <tooltip>
                               <Tooltip text="Browse for a Parabot-api.jar" />
                            </tooltip></Button>
