--- a/src/com/jackw/views/tab1.fxml
+++ b/src/com/jackw/views/tab1.fxml
@@ -23,7 +23,7 @@
                      <children>
                         <TableView fx:id="table1" layoutX="357.0" layoutY="117.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="230.0" prefWidth="217.0">
                           <columns>
-                            <TableColumn fx:id="column1_apiInterClass" prefWidth="114.0" text="API Interface" />
+                            <TableColumn fx:id="column1_apiInterClass" prefWidth="114.0" text="API Accesor" />
                             <TableColumn fx:id="column2_clientClass" prefWidth="102.0" text="Client Class" />
                           </columns>
                            <tooltip>
@@ -42,13 +42,13 @@
                               </ContextMenu>
                            </contextMenu>
                            <tooltip>
-                              <Tooltip text="API Interface extension classes appear here" />
+                              <Tooltip text="API Accessor classes appear here" />
                            </tooltip></ListView>
                         <ListView fx:id="list2" layoutX="181.0" layoutY="117.0" prefHeight="230.0" prefWidth="142.0">
                            <contextMenu>
                               <ContextMenu>
                                 <items>
-                                  <MenuItem fx:id="menuitem_link_class" mnemonicParsing="false" onAction="#onAction" text="Link to selected API Interface" />
+                                  <MenuItem fx:id="menuitem_link_class" mnemonicParsing="false" onAction="#onAction" text="Link to selected API Accessor" />
                                 </items>
                               </ContextMenu>
                            </contextMenu>
@@ -71,7 +71,7 @@
                               <Tooltip text="Click Load once you have selected a JAR" />
                            </tooltip></Button>
                         <Label layoutX="226.0" layoutY="18.0" text="Path:" />
-                        <Label layoutX="25.0" layoutY="88.0" text="API Interfaces" />
+                        <Label layoutX="25.0" layoutY="88.0" text="API Accessors" />
                         <Label layoutX="181.0" layoutY="89.0" text="Client Classes" />
                         <Button fx:id="select_jar_client" layoutX="78.0" layoutY="49.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="70.0" text="Select JAR">
                            <tooltip>
